--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="My Company Name"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="My Company Name"
+      title="We are all ready to help you!"
+    />
   </body>
 </html>
